Update cricket game

--- a/cricket.html
+++ b/cricket.html
@@ -8,14 +8,16 @@
     text-align: center;
       
 
-h1{
-  background-color: green;
-text-transform: uppercase;
+.head{
+  background-color: rgb(242, 155, 155);
+  text-transform: uppercase;
+  font-size: xx-large;
+  margin: ;
 }
 .bat{
   width: 510px;
   height: 140px;
-background-color: bisque;
+  background-color: bisque;
   border-radius: 2px;
 
 }
@@ -36,7 +38,7 @@ img{
 }
 
 .full_page{
-  background-color: purple;
+  background-color: rgb(177, 232, 255);
   border: 5px solid;
 }
 
@@ -48,7 +50,7 @@ img{
 <body>
   <div class="full_page">
 
-    <h1>Bat Ball Stump Game</h1>
+    <div class="head"><span>Bat Ball Stump Game</span></div>
   
     <hr>
     <img src="bat.png" width="510" height="700" title="bat" alt="Error" />
