--- a/calculator.html
+++ b/calculator.html
@@ -6,8 +6,16 @@
   <link rel="stylesheet" href="calculator.css" text="text/css">
 </head>
 <body>
+
+  <div class="heading"><span> Calculator</span></div>
+
+  <hr>
+<div class="project" > 
+
+
   <div id="calculator"> 
     <input type="text" id="Display" readonly>
+
     <div class="button-container">
 
 
@@ -63,6 +71,9 @@
   </div>
 
 
+</div>
+<hr>
+  
   <script>
     let currentDisplay = '';
     document.querySelector('#Display').value= currentDisplay;
