--- a/cricket.html
+++ b/cricket.html
@@ -48,6 +48,9 @@ img{
   </style>
 </head>
 <body>
+
+
+
   <div class="full_page">
 
     <div class="head"><span>Bat Ball Stump Game</span></div>
@@ -83,12 +86,15 @@ img{
     let resultMsg;
   if (computerchoice === 'ball'){
     resultMsg ='user won';
+
   }
   else if (computerchoice ==='bat'){
     resultMsg= `it's a tie`;
+
   }
   else{
     resultMsg ='computer won';
+
   }
   
   alert(`'you have choosen bat' ,computer choice is ${computerchoice} , ${ resultMsg}`);
@@ -122,12 +128,15 @@ img{
     let resultMsg;
   if (computerchoice === 'ball'){
     resultMsg =`it's a tie`;
+
   }
   else if (computerchoice ==='bat'){
     resultMsg= 'user won';
+
   }
   else{
     resultMsg ='computer won';
+
   }
   
   alert(`'you have choosen ball' ,computer choice is ${computerchoice} , ${ resultMsg}`);
@@ -156,20 +165,23 @@ img{
   //const computerChoiceMsg = `computer choice is ${computerchoice}`;
   
     let resultMsg;
-  if (computerchoice === 'Stump'){
-    resultMsg =`it's a tie`;
+  if (computerchoice === 'ball'){
+    resultMsg ='user won';
+
   }
   else if (computerchoice ==='bat'){
     resultMsg= `computer won`;
+
   }
   else{
-    resultMsg ='user won';
+    resultMsg = `it's a tie`;
   }
-  
+
   alert(`'you have choosen stump' ,computer choice is ${computerchoice} , ${ resultMsg}`);
   "><h2> stump</h2></button>
 
   </div>
+
 
 
 </body>
