--- a/cricket game 2.html
+++ b/cricket game 2.html
@@ -1,108 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Cricket Game</title>
+  <link rel="stylesheet" href="cricket.css">
 
-  <title>cricket game</title>
+
   <style>
-    body{
-    text-align: center;
-      
+    body {
+  text-align: center;
+}
 
-.head{
+.choice-button {
+  height: 200px;
+  width: 200px;
+  border: none;
+  margin: 10px;
+  background-color: rgb(164, 212, 130);
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.choice-image {
+  height: 150px;
+  width: 150px;
+}
+
+.heading{
   background-color: rgb(242, 155, 155);
   text-transform: uppercase;
-  font-size: xx-large;
-  margin: none;
-}
-.bat{
-  width: 510px;
-  height: 140px;
-  background-color: bisque;
-  border-radius: 2px;
-  cursor: pointer;
+  font-size: large;
 
 
-}
-.ball{
-  width: 510px;
-  height: 140px;
-  background-color: bisque;
-  border-radius: 2px;
-  cursor: pointer;
-
-}
-.stump{
-  width: 510px;
-  height: 140px;
-  background-color: bisque;
-  border-radius: 2px;
-  cursor: pointer;
-
-}
-.reset{
-  width: 510px;
-  height: 140px;
-  background-color: bisque;
-  border-radius: 2px;
-}
-img{
-  border: 3px solid;
-}
-
-.full_page{
+}.page{
   background-color: rgb(177, 232, 255);
-  border: 5px solid;
+  border: 2px solid;
 }
 
+.reset{
+  width: 200px;
+  height: 50px;
+  background-color: bisque;
+  border-radius: 2px;
 }
 
   </style>
 </head>
 <body>
+  <div class="heading"><h1>Bat Ball Stump Game</h1></div>
 
-
-
-  <div class="full_page">
-
-    <div class="head"><span>Bat Ball Stump Game</span></div>
-  
-    <hr>
-    <img src="bat.png" width="510" height="700" title="bat" alt="Error" />
-    <img src="ball.png" width="510" height="700" title="ball" alt="Error" />
-    <img src="stump.png" width="510" height="700" title="stump" alt="Error" />
-  <br>
-  <button class="bat" onclick="
+  <div class="page">
+  <button class="choice-button" onclick="
   let computerChoice = generateComputerChoice();
   let resultMsg = getResult('Bat', computerChoice);
   showResult('Bat', computerChoice, resultMsg);
-  ">bat
+  ">
+    <img src="cricket-bat.png" alt="Bat Image" class="choice-image">  
   </button>
 
-  <button class="ball" onclick="
+  <button class="choice-button" onclick="
     computerChoice = generateComputerChoice();
     resultMsg = getResult('Ball', computerChoice);
     showResult('Ball', computerChoice, resultMsg);
   ">
-    ball</button>
+    <img src="cricket.png" alt="Ball Image" class="choice-image">  
+  </button>
 
-  <button class="stump" onclick="
+  <button class="choice-button" onclick="
     computerChoice = generateComputerChoice();
     resultMsg = getResult('Stump', computerChoice);
     showResult('Stump', computerChoice, resultMsg);
   ">
-  stump</button>
+    <img src="wicket.png" alt="Stump Image" class="choice-image">
+  </button>
 
   <h3 id="user-move"></h3>
   <h3 id="computer-move"></h3>
   <h3 id="result"></h3>
   <h3 id="score"></h3>
 
-  <button  class ="reset" onclick="localStorage.clear()
+  <button class="reset" onclick="localStorage.clear()
       resetScore();
   ">Reset</button>
-
-
-
+    </div>
 
   <script>
     let scoreStr = localStorage.getItem('Score');
@@ -185,10 +164,10 @@ img{
 
       document.querySelector('#score').innerText = score.displayScore();
     }
+
+
+
+
   </script>
-  </div>
-
-
-
 </body>
 </html>
