bat ball stump game

--- a/bat ball stamp.html
+++ b/bat ball stamp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>cricket game</title>
+  <title>bat ball stump game</title>
   <style>
     body{
     text-align: center;
