--- a/projects/todo app.html
+++ b/projects/todo app.html
@@ -5,8 +5,10 @@
   <title>Todo App</title>
 </head>
 <body>
+
   <h1 id="main-heading">Todo App</h1>
 
+  <div id="page">
   <div class="grid-container">
     <input id="todo-input" type="text" placeholder="Enter Todo here">
     <input id="todo-date" type="date">
@@ -16,5 +18,6 @@
   <div class="todo-container grid-container"></div>
 
   <script src="todo.js"></script>
+</div>
 </body>
 </html>
